modified entire website

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -1,8 +1,10 @@
-@InProceedings{XXX,
-  author = 	 {Author 1 and Author 2},
-  title = 	 {Awesome Publication},
-  booktitle =    {International Conference on Awesome Research},
-  year = 	 2014,
-  month = 5,
-  url = {https://www.asdfasdf.asdfasdf.asdfasdfads}
+@article{binder2015quantifying,
+	title={Quantifying two-dimensional filamentous and invasive growth spatial patterns in yeast colonies},
+	author={Binder, Benjamin J and Sundstrom, Joanna F and Gardner, Jennifer M and Jiranek, Vladimir and Oliver, Stephen G},
+	journal={PLoS computational biology},
+	volume={11},
+	number={2},
+	pages={e1004070},
+	year={2015},
+	publisher={Public Library of Science San Francisco, CA USA}
 }
